# LunaLuxLang

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  test.cpp  test.lls
Includes/libos/: DataType.h  Defines.h  Error.h  FileIO.h  NativeWindow.h  NetIO.h  Window.h
Includes/libos/extensions/: Config.h
Src/: Ast.hpp  CMakeLists.txt  CppGen.cpp  CppGen.h  Entry.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Translator.cpp  Translator.h  TypeChecker.cpp  TypeChecker.h
Tests/: Main.cpp
Tests/sources/: functions.lls  globals.lls  main.lls  mutable_globals.lls
cmake/: Util.cmake
languages/: en-gb.json  en-us.json  es-es.json  hu-hu.json  nb-no.json
